# logos

./: .gitignore  ATTRIBUTIONS.md  BUILD.md  README.md  SPEC.md  TASKS.md  generate_icon.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
data/pseudepigrapha/: 1enoch_charles_1917.json  2enoch_morfill_1896.json  jubilees_charles_1913.json  supplements.json
docs/release-notes/: 0.1.10.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.15.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.1.9.md
scripts/: _user_check.py  check_db.py  cut_release.sh  explore_format.py  explore_format2.py  explore_format3.py  explore_format4.py  explore_format5.py  explore_format6.py  explore_sword.py  generate_icon.py  ingest.py  ingest_apocrypha.py  ingest_json_translation.py  ingest_kjv_strongs.py  ingest_morphgnt.py  ingest_oshb.py  ingest_pseudepigrapha.py  ingest_strongs.py  ingest_word_mappings.py  inspect_bzs.py  parse_sword.py  rebuild_database.py  scrape_pseudepigrapha.py  spot_check.py  test_sources.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  ingest_word_mappings.py  populate_terms_fts.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  biblical_lexicon.json  lib.rs  main.rs  secrets.rs
src-tauri/src/ai/: mod.rs  providers.rs  rate_limit.rs
src-tauri/src/commands/: ai.rs  audio.rs  bookmarks.rs  export.rs  ingest.rs  lexicon.rs  mod.rs  notes.rs  preferences.rs  progress.rs  search.rs  verses.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  queries.rs
src/api/: index.ts  mockData.ts
src/components/: AiPanel.tsx  BookmarkPanel.tsx  ChapterView.tsx  Header.tsx  NoteForm.tsx  NotesSidebar.tsx  SearchBar.tsx  SearchResults.tsx  SelectionActionBar.tsx  Sidebar.tsx  StrongsSidebar.tsx  TranslationSelector.tsx  VerseDisplay.tsx
src/lib/: ai.ts  aiModels.ts  audioPlayback.ts  morphology.ts  tauri.ts  useFocusTrap.ts
src/pages/: Compare.tsx  Lexicon.tsx  Notes.tsx  Reader.tsx  ReadingPage.tsx  Search.tsx  SearchPage.tsx  Settings.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
