[package]
name = "logos"
version = "0.1.0"
description = "Logos - Bible Study Application"
authors = ["Logos Team"]
edition = "2021"

[lib]
name = "logos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-updater = "2"  # DISABLED: build script needs write access to target dir (container root restriction)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "functions"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
directories = "5"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
