[package]
name = "aletheia"
version = "0.1.6"
description = "Aletheia - Bible Study Application"
authors = ["Aletheia Team"]
edition = "2021"

[lib]
name = "aletheia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables the F12 / right-click → Inspect element menu in
# production builds too — useful for beta testers reporting visual
# bugs. Tauri's debug-build default already includes it; this flag
# turns it on for `cargo build --release` as well. Drop the feature
# before a stable/no-debug release if we want a tighter surface.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
# tauri-plugin-updater = "2"  # DISABLED: build script needs write access to target dir (container root restriction)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "functions"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
directories = "5"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# OS-native credential vault (Windows Credential Manager / macOS Keychain
# / Linux Secret Service). API keys live here instead of the SQLite
# preferences table so they aren't readable from raw DB backups. v3
# requires explicit platform features — defaults are mock-only.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
